home screen design

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,5 @@
     <color name="yellow">#FFE120</color>
     <color name="grey">#A8A7A7</color>
     <color name="white_grey">#EAEAF5</color>
+    <color name="grey_one">#E8E9F6</color>
 </resources>
