food item view holder

--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -109,6 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/rvCategories" />
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvFoodItems"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="23dp"
